# battleships-cpp

./: CMakeLists.txt  README.md
BattleshipsApp/: CMakeLists.txt
BattleshipsApp/boards/: board1.txt  board10.txt  board2.txt  board3.txt  board4.txt  board5.txt  board6.txt  board7.txt  board8.txt  board9.txt
BattleshipsApp/include/: Enemy.h  Exception.h  Interface.h  Ship.h  Ship1.h  Ship2.h  Ship3.h  Ship4.h  User.h
BattleshipsApp/src/: Enemy.cpp  Exception.cpp  Interface.cpp  Ship.cpp  Ship1.cpp  Ship2.cpp  Ship3.cpp  Ship4.cpp  User.cpp  mainApp.cpp
BattleshipsApp/users_database/: users.txt
BattleshipsLib/: CMakeLists.txt
BattleshipsLib/include/: lib.h
BattleshipsLib/src/: lib.cpp
